flash_rerank/tests/snapshots/accuracy_snapshots__miniml_msmarco_fp16_ndcg10.snap
---
source: flash_rerank/tests/accuracy_snapshots.rs
expression: snapshot
---
dataset: msmarco-small
metric: ndcg@10
model: cross-encoder/ms-marco-MiniLM-L-6-v2
precision: fp16
tolerance: "0.005"
value: "0.739"
